Several changes were made: -Gitignore file was updated with local_settings.py addtion. -Some unnecessary lines of code were deleted. - The docs/README.md file was updated with instalation instructions, basic use and basic syntax for functional course's slides. - New images were added to illustrate the documentation. - remarkjs file was added locally for slide's mechanics. - Some style guides was improved. - The 'documentation' button was added to the navbar. the file teamplates/docs.html file was added to show the documentation made in the docs/README.md - A mechanic was added to the workshops/settings.py related the local_settings.py file to load a private configuration in the running server.

--- a/templates/Courses/read.html
+++ b/templates/Courses/read.html
@@ -2,11 +2,27 @@
 {% load staticfiles %}
 {% block content %}
 <style>
-     .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
-     #source{
-       display:none;
-     }
+  .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+  .remark-slide-number {
+    bottom: 5%;
+    opacity: .8;
+    position: absolute;
+    right: 20px;}
+  .remark-slides-area{
+    display:absolute;
+    bottom:1%;
+    height:80%;
+  }
+  #btntoggle{
+    z-index:999;
+  }
 </style>
+<button type="button" id="btntoggle">
+  <img src="{% static 'collapse.svg' %}"
+       alt="Show/Hide Navigation Bar"
+       title="Show/Hide Navigation Bar"
+       width="20px">
+</button>
 <textarea id="source">
 {% if course_md %}
 {{ course_md }}
@@ -14,8 +30,24 @@
 There's no 'course.md' file in the course
 {% endif %}
 </textarea>
-<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-<script>var slideshow = remark.create();</script>
+<script src="{%static 'remark-0.14.0.min.js'%}"></script>
+<script>
+  const slideshow = remark.create({
+  // Navigation options
+  navigation: {
+    scroll: true,
+    touch: true,
+    click: false,
+  },
+   ratio: '4:3',
+   slideNumberFormat: "%current% / %total%",
+});
+$(document).ready(function(){
+    $("#btntoggle").click(function(){
+        $("nav").toggle();
+    });
+});
+</script>
 {% if error %}
 <div class="alert-box error" style="color:black;">
 	<span style="color:black;">error: </span>
