--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
 </article>
 
 <article class="center ph3 ph5-ns ph0-l mw6">
-<b class="f4">Current List of Courses</b>
+<b class="f4">Current List of Courses in this Instance</b>
   <ul align="justify">
     {% if all_courses_hosted %}
     {% for course in all_courses_hosted %}
