--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,11 @@
       <img src="{% static 'icon.svg' %}" style="height:50px;"/>
     </a>
     <!-- ............... -->
+    <!-- Documentation Button -->
+    <a class="link dim dib pa2" href="{%url 'docs'%}" title="Go to documentation">
+      <img src="{% static 'docs.svg' %}" height="50px" class="white-icon"/>
+    </a>
+    <!-- ............... -->
     {% if user.is_authenticated %}
     <a class="fr no-underline near-white bg-animate bg-near-black
       hover-bg-gray inline-flex items-center ma2 tc br2 pa2"
@@ -55,8 +60,8 @@
   {% block content %}
   {% endblock %}
   </section>
-  <br/>
-  <br/>
+  <br>
+  <br>
   <script type="text/javascript" src="{% static 'scripts.js' %}"></script>
 </body>
 </html>
