some code has been cleaned (a lot time ago), were added 2 new functionalities: download entire course as PDF with CSS fixes and download all course as a zip by owner, is still pending the complete deletion of user account

--- a/templates/Courses/dashboard.html
+++ b/templates/Courses/dashboard.html
@@ -48,6 +48,15 @@
     <img src="{% static 'read.svg' %}" width="20px" class="blue-icon" alt="SEE COURSE">
   </button>
 </a>
+
+<form action="{% url 'zip' %}" method="post">
+	{% csrf_token %}
+	<input type="hidden" name="id" value="{{c.id}}" />
+	<button style="color:black;font-weight:bold;" type="submit" title="DOWNLOAD IT AS A ZIP">
+		<img src="{% static 'zip.svg' %}" width="20px" class="black-icon" alt="DOWNLOAD ZIP">
+	</button>
+</form>
+
 </td>
 </tr>
 {% endfor %}
