--- a/templates/Courses/read.html
+++ b/templates/Courses/read.html
@@ -2,27 +2,68 @@
 {% load staticfiles %}
 {% block content %}
 <style>
-  .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
-  .remark-slide-number {
-    bottom: 5%;
-    opacity: .8;
-    position: absolute;
-    right: 20px;}
-  .remark-slides-area{
-    display:absolute;
-    bottom:1%;
-    height:80%;
+.remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+.remark-slide-number {
+  bottom: 5%;
+  opacity: .8;
+  position: absolute;
+  right: 20px;}
+.remark-slides-area{
+  display:relative;
+  height:83%;
+}
+.btn-grp{
+  position: absolute;
+  z-index:99;
+  margin-left:-1%;
+  display:inline-block;
+  color:black;
+  font-weight:bold;
+}
+@page {
+  size: auto landscape;
+  margin: 0;
+}
+@media print {
+  .remark-slide-container {
+    width: 100% !important;
+    height: 100% !important;
+    transform: scale(1) !important;
+    top: 0 !important;
+    left: 0 !important;
   }
-  #btntoggle{
-    z-index:999;
+  nav
+    {
+      display: none !important;
+    }
+  .btn-grp
+  {
+    display: none !important;
   }
+}
 </style>
-<button type="button" id="btntoggle">
+<div class="btn-grp">
+<button type="button" class="ctrl_btns" id="btntoggle">
   <img src="{% static 'collapse.svg' %}"
        alt="Show/Hide Navigation Bar"
        title="Show/Hide Navigation Bar"
        width="20px">
 </button>
+<form action="{% url 'zip' %}" method="post">
+	{% csrf_token %}
+	<input type="hidden" name="id" value="{{course.id}}" />
+	<button class="ctrl_btns" type="submit" title="DOWNLOAD IT AS A ZIP">
+		<img src="{% static 'zip.svg' %}" width="20px" class="black-icon" alt="DOWNLOAD ZIP">
+	</button>
+</form>
+<button type="button" class="ctrl_btns" id="genPDF" onClick="window.print()" >
+  <img src="{% static 'pdf.svg' %}"
+       alt="Download as PDF"
+       title="Download as PDF"
+       width="20px">
+</button>
+</div>
+
 <textarea id="source">
 {% if course_md %}
 {{ course_md }}
@@ -30,8 +71,10 @@
 There's no 'course.md' file in the course
 {% endif %}
 </textarea>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 <script src="{%static 'remark-0.14.0.min.js'%}"></script>
 <script>
+  //Course presetation logic
   const slideshow = remark.create({
   // Navigation options
   navigation: {
@@ -39,10 +82,12 @@ There's no 'course.md' file in the course
     touch: true,
     click: false,
   },
-   ratio: '4:3',
+   ratio: '16:8',
    slideNumberFormat: "%current% / %total%",
 });
+
 $(document).ready(function(){
+    //Toggle button logic
     $("#btntoggle").click(function(){
         $("nav").toggle();
     });
